# GameEngine

./: .gitmodules  CMakeLists.txt  GameEngine.cpp  README.md  TODO.txt
GameObjects/: Component.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
misc/: IdentifierGenerator.h
sandbox/: CMakeLists.txt  main.cpp  test.cpp
sandbox/assets/shaders/: default.frag  default.vert
src/Core/: Application.cpp  Application.h  Configuration.h  EntryPoint.h  GLFWWindow.cpp  GLFWWindow.h  IWindow.h  Window.cpp  Window.h  World.h
src/Events/: EventQueue.h  FrameBufferResizeEvent.h  IEvent.h  WindowResizeEvent.h
src/GameObjects/: Component.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  IComponent.cpp  IComponent.h
src/GameObjects/EngineComponents/: SpriteComponent.cpp  SpriteComponent.h
src/Graphics/: Attributes.h  GraphicsIncludes.h  IProgram.h  IRenderer.h  IShader.h  ITexture.h  Mesh.h  Quad2D.cpp  Quad2D.h  RenderData.cpp  RenderData.h  Renderer.cpp  VertexData.h
src/Graphics/OpenGL/: Drawable.cpp  Drawable.h  EBO.cpp  EBO.h  GLWrapper.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VertexData.h
src/Input/: Action.h  ButtonEvent.h  InputManager.cpp  InputManager.h  KeyCodes.h  KeyState.h
src/Resources/: IResourceHandler.h  InternalHandler.h  InternalResource.h  Resource.h  ResourceManager.h  ShaderResource.cpp  ShaderResource.h  SourceCodeResource.cpp  SourceCodeResource.h  SourceHandler.cpp  SourceHandler.h  TextureHandler.cpp  TextureHandler.h  TextureResource.cpp  TextureResource.h
src/Resources/Handlers/: GenericHandler.h  IResourceHandler.h
src/Resources/SystemResources/: IResource.h  SourceResource.cpp  SourceResource.h  TextureResource.cpp  TextureResource.h
src/Utility/: Assertions.h  IdentifierGenerator.h  Logger.h  Util.cpp  Util.h
src/Window/: GLFWWindow.cpp  GLFWWindow.h  IWindow.h
